// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`previewify > Component > Elements of type ReactElement will be also rendered in the template when previewifyDispatchers will be called 1`] = `
<div>
  <rp-preview
    code="foo"
    id="dummy-uuid"
  >
    <rp-preview-area>
      <div>
        sample with children:
        <div>
          children
        </div>
         
        <div>
          element
        </div>
      </div>
    </rp-preview-area>
    <template>
      <rp-outlet
        _key="children"
      >
        <div>
          children
        </div>
      </rp-outlet>
      <rp-outlet
        _key="element"
      >
        <div>
          element
        </div>
      </rp-outlet>
    </template>
  </rp-preview>
</div>
`;

exports[`previewify > Component > It will be wrapped by <rp-preview /> when previewifyDispatchers will be called 1`] = `
<DocumentFragment>
  <rp-preview
    code="foo"
    id="dummy-uuid"
  >
    <rp-preview-area>
      <div>
        sample
      </div>
    </rp-preview-area>
    <template />
  </rp-preview>
</DocumentFragment>
`;

exports[`previewify > Component > It will be wrapped by <rp-preview /> when previewifyDispatchers will be called 2`] = `
<DocumentFragment>
  <div>
    sample
  </div>
</DocumentFragment>
`;

exports[`previewify > Component.__forQwik > \`__outlet__\` or children will be converted to <rp-slot /> and rendered 1`] = `
<DocumentFragment>
  <div>
    sample with children:
    <rp-slot
      _key="children"
    />
     
    <rp-slot
      _key="element"
    />
  </div>
</DocumentFragment>
`;

exports[`previewify > Component.__forQwik > Allow overriding props for previews 1`] = `
<DocumentFragment>
  <div
    data-testid="overwritten-test-it"
  >
    sample
  </div>
</DocumentFragment>
`;

exports[`previewify > Component.__forQwik > Allow overriding props for previews 2`] = `
<DocumentFragment>
  <div>
    sample with children:
    <div>
      overwritten children
    </div>
     
    <div>
      overwritten element
    </div>
  </div>
</DocumentFragment>
`;
